[package]
name = "rustvision"
version = "1.0.0"
description = "Gamma/brightness/contrast utility for Windows"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3.9", features = [
    "wingdi",
    "winuser",
    "minwindef",
    "windef",
    "psapi",
    "processthreadsapi",
    "handleapi",
    "winnt",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "rustvision"
path = "src/main.rs"
